[tool.poetry]
name = "pythons-game"
version = "0.1.0"
description = "Yet another snake game written in Python"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = {version = "*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
