[tool.poetry]
name = "pythons"
version = "0.1.0"
description = "Yet another snake game written in Python"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/julianolf/pythons"
keywords = ["snake", "game", "pygame"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame"
]

[tool.poetry.dependencies]
python = "^3.7"
pygame = {version = "*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"

[tool.poetry.scripts]
pythons = "pythons.game:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
